--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>Check out <a href="https://twitter.com/osunlp/status/1609642737409855490">a summary of the major achievements</a> by the OSU NLP group in 2022!</b></li>
-            <li>09/2023: 3 paper accepted to NeurIPS'23: <a href="https://arxiv.org/abs/2306.06070">Mind2Web</a> (spotlight), <a href="https://arxiv.org/abs/2306.10012">MagicBrush</a>, and Holistic Transfer.</li>
+            <li>10/2023: 3 papers accepted to EMNLP'23 on <a href="https://arxiv.org/abs/2305.06311">attribution evaluation of LLMs</a>, <a href="https://arxiv.org/abs/2305.13683">text-to-SQL error detection</a>, and biomedical NLP.</li>
+            <li>09/2023: 3 papers accepted to NeurIPS'23: <a href="https://arxiv.org/abs/2306.06070">Mind2Web</a> (spotlight), <a href="https://arxiv.org/abs/2306.10012">MagicBrush</a>, and Holistic Transfer.</li>
             <li>07/2023: Glad that <a href="https://dki-lab.github.io/LLM-Planner/">LLM-Planner</a> that uses LLMs for embodied agent planning got accepted to ICCV'23!</li>
             <li>07/2023: Honored that our paper <a href="https://arxiv.org/abs/2212.09736">Pangu</a> received the <b>Outstanding Paper Award</b> from ACL 2023!</li>
             <li>06/2023: Invited talks at Army Research Lab and OSU RISK Institute.</li>
@@ -219,6 +220,12 @@
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2309.05653">paper</a>] [<a href="https://tiger-ai-lab.github.io/MAmmoTH/">project</a>] [<a href="https://github.com/TIGER-AI-Lab/MAmmoTH">code</a>] [<a href="https://huggingface.co/datasets/TIGER-Lab/MathInstruct">data</a>]</span>
             </li>
             <li>
+              <span class="paperTitle">Multimodal Question Answering for Unified Information Extraction
+              </span> <br />
+              <span class="paperAuthor">Yuxuan Sun*, Kai Zhang*, Yu Su.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2310.03017">paper</a>] [<a href="https://github.com/OSU-NLP-Group/MQA">code</a>] (*: Equal Contribution)</span>
+            </li>
+            <li>
               <span class="paperTitle">AgentBench: Evaluating LLMs as Agents
               </span> <br />
               <span class="paperAuthor">Xiao Liu*, Hao Yu*, Hanchen Zhang, Yifan Xu, Xuanyu Lei, Hanyu Lai, Yu Gu, Hangliang Ding, Kaiwen Men, Kejuan Yang, Shudan Zhang, Xiang Deng, Aohan Zeng, Zhengxiao Du, Chenhui Zhang, Sheng Shen, Tianjun Zhang, Yu Su, Huan Sun, Minlie Huang, Yuxiao Dong, Jie Tang.</span>
@@ -235,20 +242,25 @@
               <span class="paperAuthor">Samuel Stevens, Yu Su.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.10445">paper</a>] [<a href="https://samuelstevens.me/research/encryption/">blog</a>] [<a href="https://github.com/OSU-NLP-Group/SELM">code</a>]</span>
               </li>
-              <li>
-              <span class="paperTitle">Automatic Evaluation of Attribution by Large Language Models</span> <br />
-              <span class="paperAuthor">Xiang Yue, Boshi Wang, Kai Zhang, Ziru Chen, Yu Su, Huan Sun.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.06311">paper</a>] [<a href="https://github.com/OSU-NLP-Group/AttrScore">code</a>] [<a href="https://huggingface.co/datasets/osunlp/AttrScore">data</a>]</span>
-              </li>
-              <li>
-                <span class="paperTitle">Error Detection for Text-to-SQL Semantic Parsing</span> <br />
-                <span class="paperAuthor">Shijie Chen, Ziru Chen, Huan Sun, Yu Su.</span>
-                <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.13683">paper</a>]</span>
-                </li>
 	        </ul>
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+                <li>
+                  <span class="paperTitle">Automatic Evaluation of Attribution by Large Language Models</span> <br />
+                  <span class="paperAuthor">Xiang Yue, Boshi Wang, Kai Zhang, Ziru Chen, Yu Su, Huan Sun. In the Findings of the Conference on Empirical Methods in Natural Language Processing, 2023 (<b>EMNLP'23: Findings</b>)</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.06311">paper</a>] [<a href="https://github.com/OSU-NLP-Group/AttrScore">code</a>] [<a href="https://huggingface.co/datasets/osunlp/AttrScore">data</a>]</span>
+                </li>
+                <li>
+                  <span class="paperTitle">Error Detection for Text-to-SQL Semantic Parsing</span> <br />
+                  <span class="paperAuthor">Shijie Chen, Ziru Chen, Huan Sun, Yu Su.  In the Findings of the Conference on Empirical Methods in Natural Language Processing, 2023 (<b>EMNLP'23: Findings</b>)</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.13683">paper</a>]</span>
+                </li>
+                <li>
+                  <span class="paperTitle">Solving the Right Problem is Key for Translational NLP: A Case Study in UMLS Vocabulary Insertion</span> <br />
+                  <span class="paperAuthor">Bernal Jimenez Gutierrez, Yuqing Mao, Vinh Nguyen, Kin Wah Fung, Yu Su, Olivier Bodenreider. In the Findings of the Conference on Empirical Methods in Natural Language Processing, 2023 (<b>EMNLP'23: Findings</b>)</span>
+                  <span class="paperResource"> [<a href="#">paper</a>]</span>
+                </li>
                 <li>
                   <span class="paperTitle">Mind2Web: Towards a Generalist Agent for the Web
                   </span> <br />
@@ -330,7 +342,7 @@
                 </li>
                 <li>
                 <span class="paperTitle">Thinking about GPT-3 In-Context Learning for Biomedical IE? Think Again</span> <br />
-                <span class="paperAuthor">Bernal Jiménez Gutiérrez, Nikolas McNeal, Clay Washington, You Chen, Lang Li, Huan Sun, Yu Su. Findings of the Conference on Empirical Methods in Natural Language Processing, 2022 (<b>Findings of EMNLP'22</b>)</span>
+                <span class="paperAuthor">Bernal Jiménez Gutiérrez, Nikolas McNeal, Clay Washington, You Chen, Lang Li, Huan Sun, Yu Su. Findings of the Conference on Empirical Methods in Natural Language Processing, 2022 (<b>EMNLP'22: Findings</b>)</span>
                 <span class="paperResource"> [<a href="https://arxiv.org/abs/2203.08410">paper</a>] [<a href="https://github.com/dki-lab/few-shot-bioIE">code</a>]</span>
                 </li>
                 <li>
