--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                 <li>
                   <span class="paperTitle">Error Detection for Text-to-SQL Semantic Parsing</span> <br />
                   <span class="paperAuthor">Shijie Chen, Ziru Chen, Huan Sun, Yu Su.  In the Findings of the Conference on Empirical Methods in Natural Language Processing, 2023 (<b>EMNLP'23: Findings</b>)</span>
-                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.13683">paper</a>]</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.13683">paper</a>] [<a href="https://internlp.github.io/2022/documents/2022/papers/25.pdf">InterNLP workshop at NeurIPS'22</a>]</span>
                 </li>
                 <li>
                   <span class="paperTitle">Solving the Right Problem is Key for Translational NLP: A Case Study in UMLS Vocabulary Insertion</span> <br />
@@ -329,11 +329,6 @@
                   <span class="paperTitle">Aligning Instruction Tasks Unlocks Large Language Models as Zero-Shot Relation Extractors</span> <br />
                   <span class="paperAuthor">Kai Zhang, Bernal Jimenez Gutierrez, Yu Su. Findings of the Annual Conference of the Association for Computational Linguistics, 2023 (<b>Findings of ACL'23</b>)</span>
                   <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.11159">paper</a>] [<a href="https://github.com/OSU-NLP-Group/QA4RE">code</a>] </span>
-                </li>
-                <li>
-                <span class="paperTitle">Error Detection for Interactive Text-to-SQL Semantic Parsing</span> <br />
-                <span class="paperAuthor">Shijie Chen, Ziru Chen, Huan Sun, Yu Su. Workshop on Interactive Learning for Natural Language Processing@NeurIPS, 2022 (<b>InterNLP'22</b>)</span>
-                <span class="paperResource"> [<a href="https://internlp.github.io/2022/documents/2022/papers/25.pdf">paper</a>]</span>
                 </li>
                 <li>
                 <span class="paperTitle">When More Data Hurts: A Troubling Quirk in Developing Broad-Coverage Natural Language Understanding Systems</span> <br />
