--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
         <div class="news">
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
-            <li><b>Check out <a href="https://twitter.com/osunlp/status/1609642737409855490">a summary of the major achievements</a> by the OSU NLP group in 2022!</b></li>
+            <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li>
+            <li>10/2023: Invited talks at IJCAI, UCSD, Tsinghua, Fudan, University of Hong Kong, Pinterest, and Salesforce AI Research on language agents (<a href="resources/language_agents_YuSu_2023.pdf">slides</a>).</li>
             <li>10/2023: 3 papers accepted to EMNLP'23 on <a href="https://arxiv.org/abs/2305.06311">attribution evaluation of LLMs</a>, <a href="https://arxiv.org/abs/2305.13683">text-to-SQL error detection</a>, and biomedical NLP.</li>
             <li>09/2023: 3 papers accepted to NeurIPS'23: <a href="https://arxiv.org/abs/2306.06070">Mind2Web</a> (spotlight), <a href="https://arxiv.org/abs/2306.10012">MagicBrush</a>, and Holistic Transfer.</li>
             <li>07/2023: Glad that <a href="https://dki-lab.github.io/LLM-Planner/">LLM-Planner</a> that uses LLMs for embodied agent planning got accepted to ICCV'23!</li>
@@ -75,6 +76,7 @@
             <li>04/2023: Honored to receive support from President Johnson for our research on large language models!</li>
             <li>03/2023: Invited talks at University of Tokyo and Amazon on <a href="resources/grounding_LMs.pdf">grounding language models to real-world environments</a>.</li>
             <li>03/2023: Honored to receive the <a href="https://awards.webapps.engineering.osu.edu/awards/13">College of Engineering Lumley Research Award</a>!</li>
+            <li>01/2023: Check out <a href="https://twitter.com/osunlp/status/1609642737409855490">a summary of the major achievements</a> by the OSU NLP group in 2022!</li>
             <li>12/2022: Serve as Area Chair for ACL'23.</li>
             <li>11/2022: Serve as Workflow Co-Chair for SIGKDD'23.</li>
             <li>10/2022: Excited that our <a href="https://arxiv.org/abs/2204.08109">ArcaneQA</a> paper won the Outstanding Paper Award at COLING'22 (top 15 out of 2253 submissions)!</li>
@@ -166,6 +168,19 @@
             <li>06/2015 - 09/2015: Research intern at <i>IBM T.J. Watson Research Center</i></li>
         </ul>
     </div> -->
+
+    <div class="contentBlock">
+    	<a name="talks"></a>
+        <h2>Recent Talks</h2>
+        <div class="divider"></div>
+        <div class="publication">
+          <ul>
+            <li>
+              <span class="paperTitle">Language agents: a critical evolutionary step of AI (<a href="resources/language_agents_YuSu_2023.pdf">slides</a>)</span> <br />
+              <span class="paperAuthor">IJCAI <a href="https://bigmodel.ai/llm-ijcai23">LLM Symposium</a>, <a href="https://shangjingbo1226.github.io/teaching/2023-fall-ucsd-ai-seminar">UCSD</a>, Tsinghua, Fudan, University of Hong Kong, <a href="https://www.gem.com/lp/pinterestcareers/August-2023-Pin-Labs">Pinterest Labs</a>, and Salesforce AI Research</span>
+            </li>
+          </ul>
+        </div>
 
     <div class="contentBlock">
       <a name="student"></a>
