--- a/index.html
+++ b/index.html
@@ -229,6 +229,12 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
+              <span class="paperTitle">A Simple Interpretable Transformer for Fine-Grained Image Classification and Analysis
+              </span> <br />
+              <span class="paperAuthor">Dipanjyoti Paul, Arpita Chowdhury, Xinqi Xiong, Feng-Ju Chang, David Carlyn, Samuel Stevens, Kaiya Provost, Anuj Karpatne, Bryan Carstens, Daniel Rubenstein, Charles Stewart, Tanya Berger-Wolf, Yu Su, Wei-Lun Chao.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2311.04157">paper</a>] [<a href="https://github.com/Imageomics/INTR">code</a>] </span>
+            </li>
+            <li>
               <span class="paperTitle">MAmmoTH: Building Math Generalist Models through Hybrid Instruction Tuning
               </span> <br />
               <span class="paperAuthor">Xiang Yue, Xingwei Qu, Ge Zhang, Yao Fu, Wenhao Huang, Huan Sun, Yu Su, Wenhu Chen.</span>
@@ -292,7 +298,7 @@
                   <span class="paperTitle">Holistic Transfer: Towards Non-Disruptive Fine-Tuning with Partial Target Data
                   </span> <br />
                   <span class="paperAuthor">Cheng-Hao Tu, Hong-You Chen, Jike Zhong, Zheda Mai, Vardaan Pahuja, Tanya Berger-Wolf, Song Gao, Charles Stewart, Yu Su, Wei-Lun Chao. In the Conference on Neural Information Processing Systems, 2023 (<b>NeurIPS'23</b>)</span>
-                  <span class="paperResource"> [<a href="*">paper</a>] </span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2311.01420">paper</a>] </span>
                 </li>
                 <li>
                 <span class="paperTitle">LLM-Planner: Few-Shot Grounded Planning for Embodied Agents with Large Language Models</span> <br />
