--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li>
+            <li>11/2023: Excited to release <a href="https://mmmu-benchmark.github.io/">MMMU</a>, a new multimodal benchmark for Expert AGI.</li>
             <li>10/2023: Invited talks at IJCAI, UCSD, Tsinghua, Fudan, University of Hong Kong, Pinterest, and Salesforce AI Research on language agents (<a href="resources/language_agents_YuSu_2023.pdf">slides</a>).</li>
             <li>10/2023: 3 papers accepted to EMNLP'23 on <a href="https://arxiv.org/abs/2305.06311">attribution evaluation of LLMs</a>, <a href="https://arxiv.org/abs/2305.13683">text-to-SQL error detection</a>, and biomedical NLP.</li>
             <li>09/2023: 3 papers accepted to NeurIPS'23: <a href="https://arxiv.org/abs/2306.06070">Mind2Web</a> (spotlight), <a href="https://arxiv.org/abs/2306.10012">MagicBrush</a>, and Holistic Transfer.</li>
@@ -232,7 +233,7 @@
               <span class="paperTitle">MMMU: A Massive Multi-discipline Multimodal Understanding and Reasoning Benchmark for Expert AGI
               </span> <br />
               <span class="paperAuthor">Xiang Yue*, Yuansheng Ni, Kai Zhang, Tianyu Zheng, Ruoqi Liu, Ge Zhang, Samuel Stevens, Dongfu Jiang, Weiming Ren, Yuxuan Sun, Cong Wei, Botao Yu, Ruibin Yuan, Renliang Sun, Ming Yin, Boyuan Zheng, Zhenzhu Yang, Yibo Liu, Wenhao Huang, Huan Sun, Yu Su*, Wenhu Chen*.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2311.16502">paper</a>] [<a href="https://github.com/MMMU-Benchmark/MMMU">code</a>] [<a href="https://huggingface.co/datasets/MMMU/MMMU">data</a>] (*: corresponding authors)</span>
+              <span class="paperResource"> [<a href="https://mmmu-benchmark.github.io/">project website</a>] [<a href="https://arxiv.org/abs/2311.16502">paper</a>] [<a href="https://github.com/MMMU-Benchmark/MMMU">code</a>] [<a href="https://huggingface.co/datasets/MMMU/MMMU">data</a>] (*: corresponding authors)</span>
             </li>
             <li>
               <span class="paperTitle">A Simple Interpretable Transformer for Fine-Grained Image Classification and Analysis
