--- a/index.html
+++ b/index.html
@@ -230,6 +230,12 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
+              <span class="paperTitle">BioCLIP: A Vision Foundation Model for the Tree of Life
+              </span> <br />
+              <span class="paperAuthor">Samuel Stevens*, Jiaman Wu*, Matthew J Thompson, Elizabeth G Campolongo, Chan Hee Song, David Edward Carlyn, Li Dong, Wasila M Dahdul, Charles Stewart, Tanya Berger-Wolf, Wei-Lun Chao, Yu Su.</span>
+              <span class="paperResource"> [<a href="https://imageomics.github.io/bioclip/">project website</a>] [<a href="https://arxiv.org/abs/2311.18803">paper</a>] [<a href="https://github.com/Imageomics/BioCLIP">code</a>] (*: Equal Contribution)</span>
+            </li>
+            <li>
               <span class="paperTitle">MMMU: A Massive Multi-discipline Multimodal Understanding and Reasoning Benchmark for Expert AGI
               </span> <br />
               <span class="paperAuthor">Xiang Yue*, Yuansheng Ni, Kai Zhang, Tianyu Zheng, Ruoqi Liu, Ge Zhang, Samuel Stevens, Dongfu Jiang, Weiming Ren, Yuxuan Sun, Cong Wei, Botao Yu, Ruibin Yuan, Renliang Sun, Ming Yin, Boyuan Zheng, Zhenzhu Yang, Yibo Liu, Wenhao Huang, Huan Sun, Yu Su*, Wenhu Chen*.</span>
