--- a/index.html
+++ b/index.html
@@ -242,6 +242,12 @@
               <span class="paperResource"> [<a href="https://mmmu-benchmark.github.io/">project website</a>] [<a href="https://arxiv.org/abs/2311.16502">paper</a>] [<a href="https://github.com/MMMU-Benchmark/MMMU">code</a>] [<a href="https://huggingface.co/datasets/MMMU/MMMU">data</a>] (*: corresponding authors)</span>
             </li>
             <li>
+              <span class="paperTitle">MUFFIN: Curating Multi-Faceted Instructions for Improving Instruction-Following
+              </span> <br />
+              <span class="paperAuthor">Renze Lou, Kai Zhang, Jian Xie, Yuxuan Sun, Janice Ahn, Hanzi Xu, Yu Su, Wenpeng Yin.</span>
+              <span class="paperResource"> [<a href="https://renzelou.github.io/Muffin/">project website</a>] [<a href="https://arxiv.org/abs/2312.02436">paper</a>] [<a href="https://github.com/RenzeLou/Muffin">code</a>] </span>
+            </li>
+            <li>
               <span class="paperTitle">A Simple Interpretable Transformer for Fine-Grained Image Classification and Analysis
               </span> <br />
               <span class="paperAuthor">Dipanjyoti Paul, Arpita Chowdhury, Xinqi Xiong, Feng-Ju Chang, David Carlyn, Samuel Stevens, Kaiya Provost, Anuj Karpatne, Bryan Carstens, Daniel Rubenstein, Charles Stewart, Tanya Berger-Wolf, Yu Su, Wei-Lun Chao.</span>
