--- a/index.html
+++ b/index.html
@@ -231,6 +231,12 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
+              <span class="paperTitle">GPT-4V(ision) is a Generalist Web Agent, if Grounded
+              </span> <br />
+              <span class="paperAuthor">Boyuan Zheng, Boyu Gou, Jihyung Kil, Huan Sun, Yu Su.</span>
+              <span class="paperResource"> [<a href="https://osu-nlp-group.github.io/SeeAct/">project website</a>] [<a href="https://github.com/OSU-NLP-Group/SeeAct/blob/gh-pages/static/paper/SeeAct_Paper.pdf">paper</a>] [<a href="https://github.com/OSU-NLP-Group/SeeAct/">code</a>]</span>
+            </li>
+            <li>
               <span class="paperTitle">BioCLIP: A Vision Foundation Model for the Tree of Life
               </span> <br />
               <span class="paperAuthor">Samuel Stevens*, Jiaman Wu*, Matthew J Thompson, Elizabeth G Campolongo, Chan Hee Song, David Edward Carlyn, Li Dong, Wasila M Dahdul, Charles Stewart, Tanya Berger-Wolf, Wei-Lun Chao, Yu Su.</span>
