--- a/index.html
+++ b/index.html
@@ -234,7 +234,13 @@
               <span class="paperTitle">GPT-4V(ision) is a Generalist Web Agent, if Grounded
               </span> <br />
               <span class="paperAuthor">Boyuan Zheng, Boyu Gou, Jihyung Kil, Huan Sun, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://osu-nlp-group.github.io/SeeAct/">project website</a>] [<a href="https://github.com/OSU-NLP-Group/SeeAct/blob/gh-pages/static/paper/SeeAct_Paper.pdf">paper</a>] [<a href="https://github.com/OSU-NLP-Group/SeeAct/">code</a>]</span>
+              <span class="paperResource"> [<a href="https://osu-nlp-group.github.io/SeeAct/">project website</a>] [<a href="https://arxiv.org/abs/2401.01614">paper</a>] [<a href="https://github.com/OSU-NLP-Group/SeeAct/">code</a>]</span>
+            </li>
+            <li>
+              <span class="paperTitle">Bringing Back the Context: Camera Trap Species Identification as Link Prediction on Multimodal Knowledge Graphs
+              </span> <br />
+              <span class="paperAuthor">Vardaan Pahuja, Weidi Luo, Yu Gu, Cheng-Hao Tu, Hong-You Chen, Tanya Berger-Wolf, Charles Stewart, Song Gao, Wei-Lun Chao, Yu Su.</span>
+              <span class="paperResource"> [<a href="https://arxiv.org/abs/2401.00608">paper</a>] </span>
             </li>
             <li>
               <span class="paperTitle">BioCLIP: A Vision Foundation Model for the Tree of Life
