--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                 <li>
                   <span class="paperTitle">Solving the Right Problem is Key for Translational NLP: A Case Study in UMLS Vocabulary Insertion</span> <br />
                   <span class="paperAuthor">Bernal Jimenez Gutierrez, Yuqing Mao, Vinh Nguyen, Kin Wah Fung, Yu Su, Olivier Bodenreider. In the Findings of the Conference on Empirical Methods in Natural Language Processing, 2023 (<b>EMNLP'23: Findings</b>)</span>
-                  <span class="paperResource"> [<a href="#">paper</a>]</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2311.15106">paper</a>]</span>
                 </li>
                 <li>
                   <span class="paperTitle">Mind2Web: Towards a Generalist Agent for the Web
