--- a/index.html
+++ b/index.html
@@ -319,13 +319,13 @@
                   <span class="paperTitle">Mind2Web: Towards a Generalist Agent for the Web
                   </span> <br />
                   <span class="paperAuthor">Xiang Deng, Yu Gu, Boyuan Zheng, Shijie Chen, Samuel Stevens, Boshi Wang, Huan Sun, Yu Su. In the Conference on Neural Information Processing Systems, 2023 (<b>NeurIPS'23 Spotlight</b>)</span>
-                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2306.06070">paper</a>] [<a href="https://osu-nlp-group.github.io/Mind2Web/">project website</a>]</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2306.06070">paper</a>] [<a href="https://osu-nlp-group.github.io/Mind2Web/">project website</a>] [<a href="https://github.com/OSU-NLP-Group/Mind2Web">code</a>]</span>
                 </li>
                 <li>
                   <span class="paperTitle">MagicBrush: A Manually Annotated Dataset for Instruction-Guided Image Editing
                   </span> <br />
                   <span class="paperAuthor">Kai Zhang*, Lingbo Mo*, Wenhu Chen, Huan Sun, Yu Su. In the Conference on Neural Information Processing Systems, 2023 (<b>NeurIPS'23</b>)</span>
-                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2306.10012">paper</a>] [<a href="https://osu-nlp-group.github.io/MagicBrush/">project website</a>] (*: Equal Contribution)</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2306.10012">paper</a>] [<a href="https://osu-nlp-group.github.io/MagicBrush/">project website</a>] [<a href="https://github.com/OSU-NLP-Group/MagicBrush">code</a>] (*: Equal Contribution)</span>
                   </li>
                 <li>
                   <span class="paperTitle">Holistic Transfer: Towards Non-Disruptive Fine-Tuning with Partial Target Data
@@ -336,7 +336,7 @@
                 <li>
                 <span class="paperTitle">LLM-Planner: Few-Shot Grounded Planning for Embodied Agents with Large Language Models</span> <br />
                 <span class="paperAuthor">Chan Hee Song, Jiaman Wu, Clayton Washington, Brian M. Sadler, Wei-Lun Chao, Yu Su. In the International Conference on Computer Vision, 2023 (<b>ICCV'23</b>) </span>
-                <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.04088">paper</a>] [<a href="https://dki-lab.github.io/LLM-Planner/">project website</a>] [<a href="https://embodied-ai.org/papers/2023/7.pdf">Embodied AI workshop at CVPR'23</a>]</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2212.04088">paper</a>] [<a href="https://dki-lab.github.io/LLM-Planner/">project website</a>] [<a href="https://github.com/OSU-NLP-Group/LLM-Planner">code</a>] [<a href="https://embodied-ai.org/papers/2023/7.pdf">Embodied AI workshop at CVPR'23</a>]</span>
                 </li>
                 <li>
                   <span class="paperTitle">A Retrieve-and-Read Framework for Knowledge Graph Link Prediction</span> <br />
