--- a/index.html
+++ b/index.html
@@ -256,41 +256,12 @@
               <span class="paperResource"> [<a href="https://mmmu-benchmark.github.io/">project website</a>] [<a href="https://arxiv.org/abs/2311.16502">paper</a>] [<a href="https://github.com/MMMU-Benchmark/MMMU">code</a>] [<a href="https://huggingface.co/datasets/MMMU/MMMU">data</a>] (*: corresponding authors)</span>
             </li>
             <li>
-              <span class="paperTitle">MUFFIN: Curating Multi-Faceted Instructions for Improving Instruction-Following
-              </span> <br />
-              <span class="paperAuthor">Renze Lou, Kai Zhang, Jian Xie, Yuxuan Sun, Janice Ahn, Hanzi Xu, Yu Su, Wenpeng Yin.</span>
-              <span class="paperResource"> [<a href="https://renzelou.github.io/Muffin/">project website</a>] [<a href="https://arxiv.org/abs/2312.02436">paper</a>] [<a href="https://github.com/RenzeLou/Muffin">code</a>] </span>
-            </li>
-            <li>
-              <span class="paperTitle">A Simple Interpretable Transformer for Fine-Grained Image Classification and Analysis
-              </span> <br />
-              <span class="paperAuthor">Dipanjyoti Paul, Arpita Chowdhury, Xinqi Xiong, Feng-Ju Chang, David Carlyn, Samuel Stevens, Kaiya Provost, Anuj Karpatne, Bryan Carstens, Daniel Rubenstein, Charles Stewart, Tanya Berger-Wolf, Yu Su, Wei-Lun Chao.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2311.04157">paper</a>] [<a href="https://github.com/Imageomics/INTR">code</a>] </span>
-            </li>
-            <li>
-              <span class="paperTitle">MAmmoTH: Building Math Generalist Models through Hybrid Instruction Tuning
-              </span> <br />
-              <span class="paperAuthor">Xiang Yue, Xingwei Qu, Ge Zhang, Yao Fu, Wenhao Huang, Huan Sun, Yu Su, Wenhu Chen.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2309.05653">paper</a>] [<a href="https://tiger-ai-lab.github.io/MAmmoTH/">project</a>] [<a href="https://github.com/TIGER-AI-Lab/MAmmoTH">code</a>] [<a href="https://huggingface.co/datasets/TIGER-Lab/MathInstruct">data</a>]</span>
-            </li>
-            <li>
               <span class="paperTitle">Multimodal Question Answering for Unified Information Extraction
               </span> <br />
               <span class="paperAuthor">Yuxuan Sun*, Kai Zhang*, Yu Su.</span>
               <span class="paperResource"> [<a href="https://arxiv.org/abs/2310.03017">paper</a>] [<a href="https://github.com/OSU-NLP-Group/MQA">code</a>] (*: Equal Contribution)</span>
             </li>
-            <li>
-              <span class="paperTitle">AgentBench: Evaluating LLMs as Agents
-              </span> <br />
-              <span class="paperAuthor">Xiao Liu*, Hao Yu*, Hanchen Zhang, Yifan Xu, Xuanyu Lei, Hanyu Lai, Yu Gu, Hangliang Ding, Kaiwen Men, Kejuan Yang, Shudan Zhang, Xiang Deng, Aohan Zeng, Zhengxiao Du, Chenhui Zhang, Sheng Shen, Tianjun Zhang, Yu Su, Huan Sun, Minlie Huang, Yuxiao Dong, Jie Tang.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2308.03688">paper</a>] [<a href="https://github.com/THUDM/AgentBench">code</a>] (*: Equal Contribution) </span>
-            </li>
-            <li>
-              <span class="paperTitle"><i>Adaptive Chameleon or Stubborn Sloth</i>: Revealing the Behavior of Large Language Models in Knowledge Conflicts
-              </span> <br />
-              <span class="paperAuthor">Jian Xie*, Kai Zhang*, Jiangjie Chen, Renze Lou, Yu Su.</span>
-              <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.13300">paper</a>] [<a href="https://github.com/OSU-NLP-Group/LLM-Knowledge-Conflict">code</a>] (*: Equal Contribution)</span>
-              </li>
+            
             <li>
               <span class="paperTitle">Memorization for Good: Encryption with Autoregressive Language Models</span> <br />
               <span class="paperAuthor">Samuel Stevens, Yu Su.</span>
@@ -300,6 +271,36 @@
 
             <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Refereed Publications</b></p>
             <ul>
+                <li>
+                <span class="paperTitle"><i>Adaptive Chameleon or Stubborn Sloth</i>: Revealing the Behavior of Large Language Models in Knowledge Conflicts
+                </span> <br />
+                <span class="paperAuthor">Jian Xie*, Kai Zhang*, Jiangjie Chen, Renze Lou, Yu Su. In the International Conference on Learning Representations, 2024 (<b>ICLR'24 Spotlight</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2305.13300">paper</a>] [<a href="https://github.com/OSU-NLP-Group/LLM-Knowledge-Conflict">code</a>] (*: Equal Contribution)</span>
+                </li>
+                <li>
+                <span class="paperTitle">MAmmoTH: Building Math Generalist Models through Hybrid Instruction Tuning
+                </span> <br />
+                <span class="paperAuthor">Xiang Yue, Xingwei Qu, Ge Zhang, Yao Fu, Wenhao Huang, Huan Sun, Yu Su, Wenhu Chen. In the International Conference on Learning Representations, 2024 (<b>ICLR'24 Spotlight</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2309.05653">paper</a>] [<a href="https://tiger-ai-lab.github.io/MAmmoTH/">project</a>] [<a href="https://github.com/TIGER-AI-Lab/MAmmoTH">code</a>] [<a href="https://huggingface.co/datasets/TIGER-Lab/MathInstruct">data</a>]</span>
+                </li>
+                <li>
+                <span class="paperTitle">AgentBench: Evaluating LLMs as Agents
+                </span> <br />
+                <span class="paperAuthor">Xiao Liu*, Hao Yu*, Hanchen Zhang, Yifan Xu, Xuanyu Lei, Hanyu Lai, Yu Gu, Hangliang Ding, Kaiwen Men, Kejuan Yang, Shudan Zhang, Xiang Deng, Aohan Zeng, Zhengxiao Du, Chenhui Zhang, Sheng Shen, Tianjun Zhang, Yu Su, Huan Sun, Minlie Huang, Yuxiao Dong, Jie Tang. In the International Conference on Learning Representations, 2024 (<b>ICLR'24</b>)</span>
+                <span class="paperResource"> [<a href="https://arxiv.org/abs/2308.03688">paper</a>] [<a href="https://github.com/THUDM/AgentBench">code</a>] (*: Equal Contribution) </span>
+                </li>
+                <li>
+                <span class="paperTitle">MUFFIN: Curating Multi-Faceted Instructions for Improving Instruction-Following
+                </span> <br />
+                <span class="paperAuthor">Renze Lou, Kai Zhang, Jian Xie, Yuxuan Sun, Janice Ahn, Hanzi Xu, Yu Su, Wenpeng Yin.  In the International Conference on Learning Representations, 2024 (<b>ICLR'24</b>)</span>
+                <span class="paperResource"> [<a href="https://renzelou.github.io/Muffin/">project website</a>] [<a href="https://arxiv.org/abs/2312.02436">paper</a>] [<a href="https://github.com/RenzeLou/Muffin">code</a>] </span>
+                </li>
+                <li>
+                  <span class="paperTitle">A Simple Interpretable Transformer for Fine-Grained Image Classification and Analysis
+                  </span> <br />
+                  <span class="paperAuthor">Dipanjyoti Paul, Arpita Chowdhury, Xinqi Xiong, Feng-Ju Chang, David Carlyn, Samuel Stevens, Kaiya Provost, Anuj Karpatne, Bryan Carstens, Daniel Rubenstein, Charles Stewart, Tanya Berger-Wolf, Yu Su, Wei-Lun Chao. In the International Conference on Learning Representations, 2024 (<b>ICLR'24</b>)</span>
+                  <span class="paperResource"> [<a href="https://arxiv.org/abs/2311.04157">paper</a>] [<a href="https://github.com/Imageomics/INTR">code</a>] </span>
+                </li>
                 <li>
                   <span class="paperTitle">Automatic Evaluation of Attribution by Large Language Models</span> <br />
                   <span class="paperAuthor">Xiang Yue, Boshi Wang, Kai Zhang, Ziru Chen, Yu Su, Huan Sun. In the Findings of the Conference on Empirical Methods in Natural Language Processing, 2023 (<b>EMNLP'23: Findings</b>)</span>
