--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
         <ul>
             <!--<li style="color:red;font-size:17px;font-weight:bold">11/2017: I'm looking for faculty and research scientist positions in data mining, NLP, and machine learning. Drop me an email if you are interested in my profile (<a href="resources/CV_YuSu.pdf">CV</a>, <a href="resources/research_statement.pdf">Research Statement</a>, <a href="resources/teaching_statement.pdf">Teaching Statement</a>)!</li>-->
             <li><b>These days <i>language agents</i> are what excit me most, so much so that I wrote my first <a href="https://yusu.substack.com/p/language-agents">blog</a> about it.</b></li>
+            <li>01/2024: 5 papers accepted to ICLR'24 on <a href="https://arxiv.org/abs/2305.13300">knowledge conflicts in LLMs</a>, <a href="https://arxiv.org/abs/2309.05653">MAmmoTH</a>, <a href="https://arxiv.org/abs/2308.03688">AgentBench</a>, <a href="https://arxiv.org/abs/2311.04157">Interpretable Transformer</a>, <a href="https://arxiv.org/abs/2312.02436">MUFFIN</a>.</li>
             <li>01/2024: Thrilled to release <a href="https://osu-nlp-group.github.io/SeeAct/">SeeAct</a>, enabling everyone to <b>use GPT-4V-based web agents with one click</b>.</li>
             <li>12/2023: Thrilled to release <a href="https://imageomics.github.io/bioclip/">BioCLIP</a>, a vision foundation model for the tree of life.</li>
             <li>11/2023: Excited to release <a href="https://mmmu-benchmark.github.io/">MMMU</a>, a new multimodal benchmark for Expert AGI.</li>
