--- a/index.html
+++ b/index.html
@@ -233,6 +233,12 @@
           <p style="font-size: 18px"><b>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Preprints</b></p>
           <ul>
             <li>
+              <span class="paperTitle">TravelPlanner: A Benchmark for Real-World Planning with Language Agents
+              </span> <br />
+              <span class="paperAuthor">Jian Xie*, Kai Zhang*, Jiangjie Chen, Tinghui Zhu, Renze Lou, Yuandong Tian, Yanghua Xiao, Yu Su.</span>
+              <span class="paperResource"> [<a href="https://osu-nlp-group.github.io/TravelPlanner/">project website</a>] [<a href="https://arxiv.org/abs/2402.01622">paper</a>] [<a href="https://github.com/OSU-NLP-Group/TravelPlanner">code</a>] (*: Equal Contribution)</span>
+            </li>
+            <li>
               <span class="paperTitle">GPT-4V(ision) is a Generalist Web Agent, if Grounded
               </span> <br />
               <span class="paperAuthor">Boyuan Zheng, Boyu Gou, Jihyung Kil, Huan Sun, Yu Su.</span>
